rebase and config assessment