@@ -1,6 +1,5 @@
 package com.redhat.parodos.workflow.execution.continuation;
 
-import com.fasterxml.jackson.core.JsonParseException;
 import com.redhat.parodos.workflow.definition.entity.WorkFlowDefinition;
 import com.redhat.parodos.workflow.definition.entity.WorkFlowTaskDefinition;
 import com.redhat.parodos.workflow.definition.repository.WorkFlowDefinitionRepository;
@@ -11,14 +10,13 @@ import com.redhat.parodos.workflow.execution.entity.WorkFlowExecutionContext;
 import com.redhat.parodos.workflow.execution.entity.WorkFlowTaskExecution;
 import com.redhat.parodos.workflow.execution.repository.WorkFlowRepository;
 import com.redhat.parodos.workflow.execution.repository.WorkFlowTaskRepository;
-import com.redhat.parodos.workflow.execution.service.WorkFlowServiceImpl;
 import com.redhat.parodos.workflow.task.enums.WorkFlowTaskStatus;
 import com.redhat.parodos.workflows.work.WorkContext;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
 import org.mockito.Mockito;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -33,6 +31,8 @@ class WorkFlowContinuationServiceImplTest {
 
 	private static final String TEST_WORKFLOW_TASK = "testWorkFlowTask";
 
+	private List<WorkFlowStatus> workFlowStatuses = List.of(WorkFlowStatus.IN_PROGRESS, WorkFlowStatus.PENDING);
+
 	private WorkFlowDefinitionRepository workFlowDefinitionRepository;
 
 	private WorkFlowTaskDefinitionRepository workFlowTaskDefinitionRepository;
@@ -41,9 +41,9 @@ class WorkFlowContinuationServiceImplTest {
 
 	private WorkFlowTaskRepository workFlowTaskRepository;
 
-	private WorkFlowServiceImpl workFlowService;
-
 	private WorkFlowContinuationServiceImpl service;
+
+	private AsyncWorkFlowContinuerImpl asyncWorkFlowContinuer;
 
 	@BeforeEach
 	void initEach() {
@@ -51,44 +51,57 @@ class WorkFlowContinuationServiceImplTest {
 		this.workFlowTaskDefinitionRepository = Mockito.mock(WorkFlowTaskDefinitionRepository.class);
 		this.workFlowRepository = Mockito.mock(WorkFlowRepository.class);
 		this.workFlowTaskRepository = Mockito.mock(WorkFlowTaskRepository.class);
-		this.workFlowService = Mockito.mock(WorkFlowServiceImpl.class);
+		this.asyncWorkFlowContinuer = Mockito.mock(AsyncWorkFlowContinuerImpl.class);
 		this.service = new WorkFlowContinuationServiceImpl(this.workFlowDefinitionRepository, this.workFlowRepository,
-				this.workFlowService);
+				this.asyncWorkFlowContinuer);
 	}
 
 	@Test
 	void workFlowSkipCompletedJobs() {
 		// given
-		WorkFlowExecution workFlowExecution = this.sampleWorkFlowExecution();
-		workFlowExecution.setStatus(WorkFlowStatus.COMPLETED);
-
-		WorkFlowExecution wfFailed = this.sampleWorkFlowExecution();
-		wfFailed.setStatus(WorkFlowStatus.FAILED);
-
-		Mockito.when(this.workFlowRepository.findAll()).thenReturn(List.of(workFlowExecution, wfFailed));
+		Mockito.when(this.workFlowRepository.findByStatusInAndIsMaster(workFlowStatuses)).thenReturn(Arrays.asList());
 
 		// when
 		this.service.workFlowRunAfterStartup();
 
 		// then
-		Mockito.verify(this.workFlowRepository, Mockito.times(1)).findAll();
-		Mockito.verify(this.workFlowService, Mockito.times(0)).execute(Mockito.any(), Mockito.any(), Mockito.any(),
-				Mockito.any());
+		Mockito.verify(this.workFlowRepository, Mockito.times(1)).findByStatusInAndIsMaster(workFlowStatuses);
+		Mockito.verify(this.asyncWorkFlowContinuer, Mockito.times(0)).executeAsync(Mockito.any(), Mockito.any(),
+				Mockito.any(), Mockito.any());
 	}
 
 	@Test
 	void workFlowCompleteInProgress() {
 		// given
-		WorkFlowExecution workFlowExecution = this.sampleWorkFlowExecution();
-		Mockito.when(this.workFlowRepository.findAll()).thenReturn(List.of(workFlowExecution));
+		WorkFlowExecution workFlowExecution = this.sampleWorkFlowExecution(WorkFlowStatus.IN_PROGRESS);
+		Mockito.when(this.workFlowRepository.findByStatusInAndIsMaster(workFlowStatuses))
+				.thenReturn(List.of(workFlowExecution));
 		Mockito.when(this.workFlowDefinitionRepository.findById(Mockito.any()))
 				.thenReturn(Optional.of(sampleWorkFlowDefinition()));
 		// when
 		this.service.workFlowRunAfterStartup();
 
 		// then
-		Mockito.verify(this.workFlowRepository, Mockito.times(1)).findAll();
-		Mockito.verify(this.workFlowService, Mockito.times(1)).execute(
+		Mockito.verify(this.workFlowRepository, Mockito.times(1)).findByStatusInAndIsMaster(workFlowStatuses);
+		Mockito.verify(this.asyncWorkFlowContinuer, Mockito.times(1)).executeAsync(
+				Mockito.eq(workFlowExecution.getProjectId().toString()), Mockito.eq(TEST_WORKFLOW), Mockito.any(),
+				Mockito.any());
+	}
+
+	@Test
+	void workFlowCompletePending() {
+		// given
+		WorkFlowExecution workFlowExecution = this.sampleWorkFlowExecution(WorkFlowStatus.PENDING);
+		Mockito.when(this.workFlowRepository.findByStatusInAndIsMaster(workFlowStatuses))
+				.thenReturn(List.of(workFlowExecution));
+		Mockito.when(this.workFlowDefinitionRepository.findById(Mockito.any()))
+				.thenReturn(Optional.of(sampleWorkFlowDefinition()));
+		// when
+		this.service.workFlowRunAfterStartup();
+
+		// then
+		Mockito.verify(this.workFlowRepository, Mockito.times(1)).findByStatusInAndIsMaster(workFlowStatuses);
+		Mockito.verify(this.asyncWorkFlowContinuer, Mockito.times(1)).executeAsync(
 				Mockito.eq(workFlowExecution.getProjectId().toString()), Mockito.eq(TEST_WORKFLOW), Mockito.any(),
 				Mockito.any());
 	}
@@ -96,8 +109,9 @@ class WorkFlowContinuationServiceImplTest {
 	@Test
 	void workFlowCompleteWithTaskExecutions() {
 		// given
-		WorkFlowExecution workFlowExecution = this.sampleWorkFlowExecution();
-		Mockito.when(this.workFlowRepository.findAll()).thenReturn(List.of(workFlowExecution));
+		WorkFlowExecution workFlowExecution = this.sampleWorkFlowExecution(WorkFlowStatus.IN_PROGRESS);
+		Mockito.when(this.workFlowRepository.findByStatusInAndIsMaster(workFlowStatuses))
+				.thenReturn(List.of(workFlowExecution));
 		Mockito.when(this.workFlowDefinitionRepository.findById(Mockito.any()))
 				.thenReturn(Optional.of(sampleWorkFlowDefinition()));
 		WorkFlowTaskDefinition workFlowTaskDefinition = sampleWorkFlowTaskDefinition();
@@ -116,8 +130,8 @@ class WorkFlowContinuationServiceImplTest {
 		this.service.workFlowRunAfterStartup();
 
 		// then
-		Mockito.verify(this.workFlowRepository, Mockito.times(1)).findAll();
-		Mockito.verify(this.workFlowService, Mockito.times(1)).execute(
+		Mockito.verify(this.workFlowRepository, Mockito.times(1)).findByStatusInAndIsMaster(workFlowStatuses);
+		Mockito.verify(this.asyncWorkFlowContinuer, Mockito.times(1)).executeAsync(
 				Mockito.eq(workFlowExecution.getProjectId().toString()), Mockito.eq(TEST_WORKFLOW), Mockito.any(),
 				Mockito.any());
 	}
@@ -125,8 +139,9 @@ class WorkFlowContinuationServiceImplTest {
 	@Test
 	void workFlowCompleteWithInvalidJson() {
 		// given
-		WorkFlowExecution wfExecution = this.sampleWorkFlowExecution();
-		Mockito.when(this.workFlowRepository.findAll()).thenReturn(List.of(wfExecution));
+		WorkFlowExecution wfExecution = this.sampleWorkFlowExecution(WorkFlowStatus.IN_PROGRESS);
+		Mockito.when(this.workFlowRepository.findByStatusInAndIsMaster(workFlowStatuses))
+				.thenReturn(List.of(wfExecution));
 		Mockito.when(this.workFlowDefinitionRepository.findById(Mockito.any()))
 				.thenReturn(Optional.of(sampleWorkFlowDefinition()));
 		WorkFlowTaskDefinition wfTaskDef = sampleWorkFlowTaskDefinition();
@@ -138,8 +153,9 @@ class WorkFlowContinuationServiceImplTest {
 
 		Mockito.when(this.workFlowTaskRepository.findByWorkFlowExecutionId(wfExecution.getId()))
 				.thenReturn(List.of(workFlowTaskExecution));
-		Mockito.when(workFlowService.execute(Mockito.any(), Mockito.any(), Mockito.any(), Mockito.any()))
-				.thenThrow(new RuntimeException("JsonParseException"));
+		Mockito.doThrow(new RuntimeException("JsonParseException")).when(asyncWorkFlowContinuer)
+				.executeAsync(Mockito.any(), Mockito.any(), Mockito.any(), Mockito.any());
+
 		// when
 		Exception exception = assertThrows(RuntimeException.class, () -> {
 			this.service.workFlowRunAfterStartup();
@@ -149,14 +165,14 @@ class WorkFlowContinuationServiceImplTest {
 		assertNotNull(exception);
 		assertTrue(exception.getMessage().contains("JsonParseException"));
 
-		Mockito.verify(this.workFlowRepository, Mockito.times(1)).findAll();
-		Mockito.verify(this.workFlowService, Mockito.times(1)).execute(Mockito.any(), Mockito.any(), Mockito.any(),
-				Mockito.any());
+		Mockito.verify(this.workFlowRepository, Mockito.times(1)).findByStatusInAndIsMaster(workFlowStatuses);
+		Mockito.verify(this.asyncWorkFlowContinuer, Mockito.times(1)).executeAsync(Mockito.any(), Mockito.any(),
+				Mockito.any(), Mockito.any());
 	}
 
-	private WorkFlowExecution sampleWorkFlowExecution() {
+	private WorkFlowExecution sampleWorkFlowExecution(WorkFlowStatus workFlowStatus) {
 		WorkFlowExecution workFlowExecution = WorkFlowExecution.builder().projectId(UUID.randomUUID())
-				.status(WorkFlowStatus.IN_PROGRESS).build();
+				.status(workFlowStatus).build();
 		workFlowExecution.setId(UUID.randomUUID());
 		workFlowExecution.setArguments("{\"test\": \"test\"}");
 		workFlowExecution.setWorkFlowExecutionContext(WorkFlowExecutionContext.builder()
